--- a/280922_Ohmyfood/index.html
+++ b/280922_Ohmyfood/index.html
@@ -17,125 +17,134 @@
 
 <body>
     <header>
-        <a href="/" class="logo"><img src="images/logo/ohmyfood.png" alt="OhMyFood" class="logo_header"></a>
-        <i class="fas fa-map-marker-alt"></i>
-        <p>Paris, Belleville</p>
+        <div class="container">
+            <a href="/" class="logo"><img src="images/logo/ohmyfood.png" alt="OhMyFood" class="logo_header"></a>
+            <span>
+                <i class="fas fa-map-marker-alt"></i>
+                <p>Paris, Belleville</p>
+            </span>
+        </div>
     </header>
 
     <main>
-        <div class="reservation">
-            <h1>Réservez le menu qui vous convient</h1>
-            <p>Découvrez des restaurants d'exception, séléctionnés par nos soins</p>
-            <span>Explorer nos restaurants</span>
-        </div>
+        <div class="container">
+            <div class="reservation">
+                <h1>Réservez le menu qui vous convient</h1>
+                <p>Découvrez des restaurants d'exception, séléctionnés par nos soins</p>
+                <span>Explorer nos restaurants</span>
+            </div>
 
-        <div class="fonctionnement">
-            <h2>Fonctionnement</h2>
-            <ul>
-                <li>
-                    <span>
-                        <p class="number">1</p>
-                        <i class="fa-solid fa-mobile-screen"></i>
-                        <p>Choisissez un restaurant</p>
-                    </span>
-                </li>
-                <li>
-                    <span>
-                        <p class="number">2</p>
-                        <i class="fas fa-list-ul"></i>
-                        <p>Composez votre menu</p>
-                    </span>
-                </li>
-                <li>
-                    <span>
-                        <p class="number">3</p>
-                        <i class="fas fa-store"></i>
-                        <p>Dégustez au restaurant</p>
-                    </span>
-                </li>
-            </ul>
-        </div>
-        <div class="restaurants">
-            <h2>Restaurants</h2>
-            <ul>
-                <li>
-                    <span>
-                        <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût">
-                        <div class="rest_descri">
-                            <div class="rest_name">
-                                <h3>La palette du goût</h3>
-                                <p>Ménilmontant</p>
+            <div class="fonctionnement">
+                <h2>Fonctionnement</h2>
+                <ul>
+                    <li>
+                        <span>
+                            <p class="number">1</p>
+                            <i class="fa-solid fa-mobile-screen"></i>
+                            <p>Choisissez un restaurant</p>
+                        </span>
+                    </li>
+                    <li>
+                        <span>
+                            <p class="number">2</p>
+                            <i class="fas fa-list-ul"></i>
+                            <p>Composez votre menu</p>
+                        </span>
+                    </li>
+                    <li>
+                        <span>
+                            <p class="number">3</p>
+                            <i class="fas fa-store"></i>
+                            <p>Dégustez au restaurant</p>
+                        </span>
+                    </li>
+                </ul>
+            </div>
+            <div class="restaurants">
+                <h2>Restaurants</h2>
+                <ul>
+                    <li>
+                        <span>
+                            <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+                                alt="La palette du goût">
+                            <div class="rest_descri">
+                                <div class="rest_name">
+                                    <h3>La palette du goût</h3>
+                                    <p>Ménilmontant</p>
+                                </div>
+                                <i class="fa-thin fa-heart"></i>
                             </div>
-                            <i class="fa-thin fa-heart"></i>
-                        </div>
-                    </span>
-                </li>
-                <li>
-                    <span>
-                        <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La palette du goût">
-                        <div class="rest_descri">
-                            <div class="rest_name">
-                                <h3>La note enchantée</h3>
-                                <p>Charonne</p>
+                        </span>
+                    </li>
+                    <li>
+                        <span>
+                            <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La palette du goût">
+                            <div class="rest_descri">
+                                <div class="rest_name">
+                                    <h3>La note enchantée</h3>
+                                    <p>Charonne</p>
+                                </div>
+                                <i class="fa-thin fa-heart"></i>
                             </div>
-                            <i class="fa-thin fa-heart"></i>
-                        </div>
-                    </span>
-                </li>
-                <li>
-                    <span>
-                        <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="La palette du goût">
-                        <div class="rest_descri">
-                            <div class="rest_name">
-                                <h3>À la française</h3>
-                                <p>Cité Rouge</p>
+                        </span>
+                    </li>
+                    <li>
+                        <span>
+                            <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="La palette du goût">
+                            <div class="rest_descri">
+                                <div class="rest_name">
+                                    <h3>À la française</h3>
+                                    <p>Cité Rouge</p>
+                                </div>
+                                <i class="fa-thin fa-heart"></i>
                             </div>
-                            <i class="fa-thin fa-heart"></i>
-                        </div>
-                    </span>
-                </li>
-                <li>
-                    <span>
-                        <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
-                            alt="La palette du goût">
-                        <div class="rest_descri">
-                            <div class="rest_name">
-                                <h3>Le délice des sens</h3>
-                                <p>Folie-Méricourt</p>
+                        </span>
+                    </li>
+                    <li>
+                        <span>
+                            <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
+                                alt="La palette du goût">
+                            <div class="rest_descri">
+                                <div class="rest_name">
+                                    <h3>Le délice des sens</h3>
+                                    <p>Folie-Méricourt</p>
+                                </div>
+                                <i class="fa-thin fa-heart"></i>
                             </div>
-                            <i class="fa-thin fa-heart"></i>
-                        </div>
-                    </span>
-                </li>
-            </ul>
+                        </span>
+                    </li>
+                </ul>
+            </div>
         </div>
     </main>
 
     <footer>
-        <img src="images/logo/ohmyfood.png" alt="OhMyFood" class="logo_footer">
-        <ul>
-            <a href="#">
-                <li>
-                    <span>
-                        <i class="fas fa-utensils"></i>
-                        <p>Proposer un restaurant</p>
-                    </span>
-                </li>
-            </a>
-            <a href="#">
-                <li>
-                    <span>
-                        <i class="fa-solid fa-handshake-angle"></i>
-                        <p>Proposer un restaurant</p>
-                    </span>
-                </li>
-            </a>
-            <a href="#">
-                <li> Mentions légales</li>
-            </a>
-            <a href="#">
-                <li>Contact</li>
-            </a>
-        </ul>
+        <div class="container">
+            <img src="images/logo/ohmyfood.png" alt="OhMyFood" class="logo_footer">
+            <ul>
+                <a href="#">
+                    <li>
+                        <span>
+                            <i class="fas fa-utensils"></i>
+                            <p>Proposer un restaurant</p>
+                        </span>
+                    </li>
+                </a>
+                <a href="#">
+                    <li>
+                        <span>
+                            <i class="fa-solid fa-handshake-angle"></i>
+                            <p>Proposer un restaurant</p>
+                        </span>
+                    </li>
+                </a>
+                <a href="#">
+                    <li> Mentions légales</li>
+                </a>
+                <a href="#">
+                    <li>Contact</li>
+                </a>
+            </ul>
+        </div>
     </footer>
 </body>
