--- a/index.html
+++ b/index.html
@@ -19,41 +19,38 @@
     <header>
         <div class="container">
             <a href="/" class="logo"><img src="images/logo/ohmyfood.png" alt="OhMyFood" class="logo_header"></a>
-            <span>
-                <i class="fas fa-map-marker-alt"></i>
-                <p>Paris, Belleville</p>
-            </span>
         </div>
     </header>
 
     <main>
         <div class="container">
+            <span class="local">
+                <i class="fas fa-map-marker-alt"></i>
+                <p>Paris, Belleville</p>
+            </span>
             <div class="reservation">
                 <h1>Réservez le menu qui vous convient</h1>
                 <p>Découvrez des restaurants d'exception, séléctionnés par nos soins</p>
-                <span>Explorer nos restaurants</span>
+                <a class="btn_princ">Explorer nos restaurants</a>
             </div>
 
             <div class="fonctionnement">
                 <h2>Fonctionnement</h2>
                 <ul>
-                    <li>
+                    <li class="step">
                         <span>
-                            <p class="number">1</p>
                             <i class="fa-solid fa-mobile-screen"></i>
                             <p>Choisissez un restaurant</p>
                         </span>
                     </li>
-                    <li>
+                    <li class="step">
                         <span>
-                            <p class="number">2</p>
                             <i class="fas fa-list-ul"></i>
                             <p>Composez votre menu</p>
                         </span>
                     </li>
-                    <li>
+                    <li class="step">
                         <span>
-                            <p class="number">3</p>
                             <i class="fas fa-store"></i>
                             <p>Dégustez au restaurant</p>
                         </span>
@@ -64,7 +61,7 @@
                 <h2>Restaurants</h2>
                 <ul>
                     <li>
-                        <span>
+                        <span class="rest">
                             <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
                                 alt="La palette du goût">
                             <div class="rest_descri">
@@ -77,7 +74,7 @@
                         </span>
                     </li>
                     <li>
-                        <span>
+                        <span class="rest">
                             <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La palette du goût">
                             <div class="rest_descri">
                                 <div class="rest_name">
@@ -89,7 +86,7 @@
                         </span>
                     </li>
                     <li>
-                        <span>
+                        <span class="rest">
                             <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="La palette du goût">
                             <div class="rest_descri">
                                 <div class="rest_name">
@@ -101,7 +98,7 @@
                         </span>
                     </li>
                     <li>
-                        <span>
+                        <span class="rest">
                             <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
                                 alt="La palette du goût">
                             <div class="rest_descri">
@@ -134,7 +131,7 @@
                     <li>
                         <span>
                             <i class="fa-solid fa-handshake-angle"></i>
-                            <p>Proposer un restaurant</p>
+                            <p>Devenir partenaire</p>
                         </span>
                     </li>
                 </a>
