--- a/index.html
+++ b/index.html
@@ -24,14 +24,16 @@
 
     <main>
         <div class="container">
-            <span class="local">
-                <i class="fas fa-map-marker-alt"></i>
-                <p>Paris, Belleville</p>
-            </span>
-            <div class="reservation">
-                <h1>Réservez le menu qui vous convient</h1>
-                <p>Découvrez des restaurants d'exception, séléctionnés par nos soins</p>
-                <a class="btn_princ">Explorer nos restaurants</a>
+            <div class="presentation">
+                <span class="local">
+                    <i class="fas fa-map-marker-alt"></i>
+                    <p>Paris, Belleville</p>
+                </span>
+                <div class="reservation">
+                    <h1>Réservez le menu qui vous convient</h1>
+                    <p>Découvrez des restaurants d'exception, séléctionnés par nos soins</p>
+                    <a class="btn_princ">Explorer nos restaurants</a>
+                </div>
             </div>
 
             <div class="fonctionnement">
@@ -61,54 +63,71 @@
                 <h2>Restaurants</h2>
                 <ul>
                     <li>
-                        <span class="rest">
-                            <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
-                                alt="La palette du goût">
-                            <div class="rest_descri">
-                                <div class="rest_name">
-                                    <h3>La palette du goût</h3>
-                                    <p>Ménilmontant</p>
+                        <a href="Page/la_palette_du_gout.html">
+                            <span class="rest">
+                                <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+                                    alt="La palette du goût">
+                                <div class="rest_descri">
+                                    <div class="rest_name">
+                                        <h3>La palette du goût</h3>
+                                        <p>Ménilmontant</p>
+                                    </div>
+                                    <div class="heart">
+                                        <i class="fa-2x fa-heart far menu_like menu_like--bg" aria-hidden="true"></i>
+                                    </div>
                                 </div>
-                                <i class="fa-thin fa-heart"></i>
-                            </div>
-                        </span>
+                            </span>
+                        </a>
                     </li>
                     <li>
-                        <span class="rest">
-                            <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La palette du goût">
-                            <div class="rest_descri">
-                                <div class="rest_name">
-                                    <h3>La note enchantée</h3>
-                                    <p>Charonne</p>
+                        <a href="Page/la_note_enchantée.html">
+                            <span class="rest">
+                                <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La palette du goût">
+                                <div class="rest_descri">
+                                    <div class="rest_name">
+                                        <h3>La note enchantée</h3>
+                                        <p>Charonne</p>
+                                    </div>
+                                    <div class="heart">
+                                        <i class="fa-2x fa-heart far menu_like menu_like--bg" aria-hidden="true"></i>
+                                    </div>
                                 </div>
-                                <i class="fa-thin fa-heart"></i>
-                            </div>
-                        </span>
+                            </span>
+                        </a>
                     </li>
                     <li>
-                        <span class="rest">
-                            <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="La palette du goût">
-                            <div class="rest_descri">
-                                <div class="rest_name">
-                                    <h3>À la française</h3>
-                                    <p>Cité Rouge</p>
+                        <a href="Page/a_la_frabcaise.html">
+                            <span class="rest">
+                                <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
+                                    alt="La palette du goût">
+                                <div class="rest_descri">
+                                    <div class="rest_name">
+                                        <h3>À la française</h3>
+                                        <p>Cité Rouge</p>
+                                    </div>
+                                    <div class="heart">
+                                        <i class="fa-2x fa-heart far menu_like menu_like--bg" aria-hidden="true"></i>
+                                    </div>
                                 </div>
-                                <i class="fa-thin fa-heart"></i>
-                            </div>
-                        </span>
+                            </span>
+                        </a>
                     </li>
                     <li>
-                        <span class="rest">
-                            <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
-                                alt="La palette du goût">
-                            <div class="rest_descri">
-                                <div class="rest_name">
-                                    <h3>Le délice des sens</h3>
-                                    <p>Folie-Méricourt</p>
+                        <a href="Page/le_delice_des_sens.html">
+                            <span class="rest">
+                                <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
+                                    alt="La palette du goût">
+                                <div class="rest_descri">
+                                    <div class="rest_name">
+                                        <h3>Le délice des sens</h3>
+                                        <p>Folie-Méricourt</p>
+                                    </div>
+                                    <div class="heart">
+                                        <i class="fa-2x fa-heart far menu_like menu_like--bg" aria-hidden="true"></i>
+                                    </div>
                                 </div>
-                                <i class="fa-thin fa-heart"></i>
-                            </div>
-                        </span>
+                            </span>
+                        </a>
                     </li>
                 </ul>
             </div>
@@ -119,29 +138,27 @@
         <div class="container">
             <img src="images/logo/ohmyfood.png" alt="OhMyFood" class="logo_footer">
             <ul>
-                <a href="#">
-                    <li>
+                <li>
+                    <a href="#">
                         <span>
                             <i class="fas fa-utensils"></i>
                             <p>Proposer un restaurant</p>
                         </span>
-                    </li>
-                </a>
-                <a href="#">
-                    <li>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
                         <span>
                             <i class="fa-solid fa-handshake-angle"></i>
                             <p>Devenir partenaire</p>
                         </span>
-                    </li>
-                </a>
-                <a href="#">
-                    <li> Mentions légales</li>
-                </a>
-                <a href="#">
-                    <li>Contact</li>
-                </a>
+                    </a>
+                </li>
+                <li><a href="#">Mentions légales</a></li>
+                <li><a href="#">Contact</a></li>
             </ul>
         </div>
     </footer>
 </body>
+
+</html>
