--- a/index.html
+++ b/index.html
@@ -25,10 +25,12 @@
     <main>
         <div class="container">
             <div class="presentation">
-                <span class="local">
+                <form id="form">
                     <i class="fas fa-map-marker-alt"></i>
-                    <p>Paris, Belleville</p>
-                </span>
+                
+                    <label for="search" class="formulaire">Tapez votre recherche</label>
+                    <input type="search" placeholder="Paris,Belleville"  id="search"/>
+                </form> 
                 <div class="reservation">
                     <h1>Réservez le menu qui vous convient</h1>
                     <p>Découvrez des restaurants d'exception, séléctionnés par nos soins</p>
@@ -65,8 +67,10 @@
                     <li>
                         <a href="Page/la_palette_du_gout.html">
                             <span class="rest">
-                                <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
-                                    alt="La palette du goût">
+                                <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût">
+                                <div class="bannier">
+                                    Nouveau
+                                </div>
                                 <div class="rest_descri">
                                     <div class="rest_name">
                                         <h3>La palette du goût</h3>
@@ -83,6 +87,9 @@
                         <a href="Page/la_note_enchantée.html">
                             <span class="rest">
                                 <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La palette du goût">
+                                <div class="bannier">
+                                    Nouveau
+                                </div> 
                                 <div class="rest_descri">
                                     <div class="rest_name">
                                         <h3>La note enchantée</h3>
@@ -115,8 +122,7 @@
                     <li>
                         <a href="Page/le_delice_des_sens.html">
                             <span class="rest">
-                                <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
-                                    alt="La palette du goût">
+                                <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="La palette du goût">
                                 <div class="rest_descri">
                                     <div class="rest_name">
                                         <h3>Le délice des sens</h3>
