--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
 		<script src="https://kit.fontawesome.com/0b454f7053.js" crossorigin="anonymous"></script>
-        <link rel="stylesheet" href="css/reset.css">
-        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="/CSS/reset.css">
+        <link rel="stylesheet" href="/CSS/style.css">
         <title>Ohmyfood</title>
     </head>
 
